--- a/skillshare-backend/package.json
+++ b/skillshare-backend/package.json
@@ -1,18 +1,12 @@
 {
-  "name": "skillshare-backend",
+  "name": "skillswap_project",
   "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "mssql": "^11.0.1"
+    "body-parser": "^2.2.0",
+    "express": "^5.1.0"
   }
 }
