--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "body-parser": "^1.20.3",
-    "express": "^4.21.2",
-    "sqlite3": "^5.1.7"
-  }
+"dependencies": {
+  "cors": "^2.8.5"
 }
+
+  }
+
