Add express, cors, body-parser for Render

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "scripts": {
     "start": "node server.js"
   },
-"dependencies": {
-  "cors": "^2.8.5"
-}
-
+  "dependencies": {
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0"
   }
-
+}
